syntax = "proto3";

package auth;

option go_package = "./auth;authpb";

enum DecodeStatus {
  VALID = 0;
  EXPIRED = 1;
  INVALID = 2;
}

message UserId {
  // it is a string but DON'T abuse
  // DON'T try to enter a stringified JSON here
  // JWT payload is meant to contain the least amount of data possible
  string userId = 1;
}

message JWT {
  string jwt = 1;
}

message DecodedJWT {
  DecodeStatus status = 1;
  string userId = 2;
}

service Auth {
  rpc createJWT(UserId) returns (JWT) {}

  // Decode and verify the JWT
  rpc decodeJWT(JWT) returns (DecodedJWT) {}
}